--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,6 +64,7 @@
             android:layout_marginTop="10dp">
 
             <CheckBox
+                android:id="@+id/remember_me"
                 style="@style/LoginRememberMe"
                 android:text="@string/login_remember_me" />
 
