--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -131,6 +131,7 @@
     <style name="LoginRememberMe" parent="DefaultWidthHeight">
         <item name="android:layout_gravity">left</item>
         <item name="android:layout_weight">1</item>
+        <item name="buttonTint">@color/backgroundLightColor</item>
         <item name="android:layout_marginLeft">62dp</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:textColor">@color/backgroundLightColor</item>
