--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -12,12 +12,14 @@
     android:paddingBottom="@dimen/activity_vertical_nav_bottom_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/icon_user_login"
+        android:layout_width="@dimen/nav_header_icon_width"
+        android:layout_height="@dimen/nav_header_icon_height"
+        android:src="@drawable/ic_chronotes_dark"
+        app:civ_border_color="#fff"
+        app:civ_border_width="2dp"
+        android:layout_marginTop="10dp"/>
 
     <TextView
         android:id="@+id/name_user_login"
