--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="activity_vertical_nav_bottom_margin">50dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">200dp</dimen>
+    <dimen name="nav_header_icon_width">70dp</dimen>
+    <dimen name="nav_header_icon_height">70dp</dimen>
 </resources>
