--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -119,6 +119,20 @@
         <item name="android:stateListAnimator">@null</item>
     </style>
 
+    <style name="LogoutButton" parent="DefaultWidthHeight">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginLeft">62dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginRight">62dp</item>
+        <item name="android:background">@drawable/bg_red_full</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingTop">14dp</item>
+        <item name="android:paddingBottom">14dp</item>
+        <item name="android:textColor">@color/White</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:stateListAnimator">@null</item>
+    </style>
+
     <style name="LoginForgetPassword" parent="DefaultWidthHeight">
         <item name="android:gravity">right</item>
         <item name="android:layout_weight">1</item>
