--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".login_register.RegisterActivity">
+    tools:context=".main.register.RegisterActivity">
 
     <LinearLayout
         style="@style/DefaultWidthHeight"
