--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".calendar.AddTask">
+    tools:context=".home.ui.calendar.AddTask">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
