--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".calendar.Calendar_Activity">
+    tools:context=".home.ui.calendar.Calendar_Activity">
 
 <!--    <android.support.design.widget.AppBarLayout-->
 <!--        android:layout_width="match_parent"-->
