--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,9 +19,9 @@
 
     <fragment
         android:id="@+id/nav_calendar"
-        android:name="edu.bluejack19_2.chronotes.home.ui.calendar.CalendarFragment"
+        android:name="edu.bluejack19_2.chronotes.home.ui.calendar.CalendarFragmentMain"
         android:label="@string/menu_calendar"
-        tools:layout="@layout/fragment_calendar" />
+        tools:layout="@layout/fragment_calendar_main" />
 
     <fragment
         android:id="@+id/nav_setting"
