--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:padding="6dp"
-    android:paddingHorizontal="10dp"
-    >
+    android:paddingHorizontal="10dp">
 
     <CheckBox
-        android:layout_width="wrap_content"
         android:id="@+id/chk_completed"
-        android:layout_height="wrap_content"
-        />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <TextView
-        android:layout_width="match_parent"
         android:id="@+id/tv_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="5dp"/>
+        android:paddingVertical="5dp" />
 
 </LinearLayout>
