--- a/app/src/main/res/layout/list_notes.xml
+++ b/app/src/main/res/layout/list_notes.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     android:id="@+id/cv_notes">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#95186AE4"
         android:orientation="vertical"
-        android:padding="10sp">
+        android:padding="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
