Add and Remove Note Collaborator

--- a/app/src/main/res/menu/activity_note_detail_menu.xml
+++ b/app/src/main/res/menu/activity_note_detail_menu.xml
@@ -15,8 +15,8 @@
                 android:title="Add Collaborator" />
 
             <item
-                android:id="@+id/remove_collaborator"
-                android:title="Remove Collaborator" />
+                android:id="@+id/view_collaborator"
+                android:title="View Collaborator" />
 
         </menu>
 
@@ -35,8 +35,8 @@
                 android:title="Add Reminder" />
 
             <item
-                android:id="@+id/remove_reminder"
-                android:title="Remove Reminder" />
+                android:id="@+id/view_reminder"
+                android:title="View Reminder" />
         </menu>
 
     </item>
