--- a/app/src/main/res/layout/fragment_notes_collaborator.xml
+++ b/app/src/main/res/layout/fragment_notes_collaborator.xml
@@ -4,14 +4,31 @@
     android:id="@+id/note_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#95186AE4"
+    android:background="@color/White"
     android:gravity="center_vertical"
     android:orientation="vertical"
     tools:context=".home.ui.notes.NoteCollaborator">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="View Collaborator"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_notes_reminders"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/button_notes_close"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#424141"
+        android:background="#70B5C1"
+        android:text="Close"/>
 
 </LinearLayout>
