--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -114,7 +114,7 @@
         <item name="android:layout_marginLeft">62dp</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_marginRight">62dp</item>
-        <item name="android:background">@drawable/bg_blue_full</item>
+        <item name="android:background">@drawable/bg_round_blue</item>
         <item name="android:gravity">center</item>
         <item name="android:paddingTop">14dp</item>
         <item name="android:paddingBottom">14dp</item>
@@ -128,7 +128,7 @@
         <item name="android:layout_marginLeft">62dp</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_marginRight">62dp</item>
-        <item name="android:background">@drawable/bg_red_full</item>
+        <item name="android:background">@drawable/bg_round_red</item>
         <item name="android:gravity">center</item>
         <item name="android:paddingTop">14dp</item>
         <item name="android:paddingBottom">14dp</item>
