--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,9 +14,19 @@
         android:layout_height="wrap_content"
         />
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="260dp"
         android:id="@+id/tv_title"
         android:layout_height="wrap_content"
         android:paddingVertical="5dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/list_view_due"
+        />
+    <TextView
+        android:id="@+id/list_due"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:gravity="end"/>
 
 </LinearLayout>
