--- a/app/src/main/res/layout/activity_update_task.xml
+++ b/app/src/main/res/layout/activity_update_task.xml
@@ -27,10 +27,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:text="Add Task"
+                    android:text="Task Detail"
                     android:textSize="20dp"
                     android:layout_marginTop="5dp"
-
                     android:gravity="center_horizontal"
                     />
                 <ImageView
@@ -40,6 +39,14 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:src="@drawable/ic_back" />
+                <ImageView
+                    android:id="@+id/iv_collab"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="right"
+                    android:src="@drawable/ic_collab" />
             </FrameLayout>
 
 
@@ -230,7 +237,7 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
                 android:textColor="@color/WhiteSmoke"
-                android:text="Add New Task"
+                android:text="Save Changes"
                 android:layout_gravity="center_horizontal"
                 android:backgroundTint="@color/CornflowerBlue"
                 />
