--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,12 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AppTheme.EditText" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorControlNormal">@color/IndianRed</item>
+        <item name="colorControlActivated">@color/lightCrimson</item>
+<!--        <item name="colorControlHighlight">#000000</item>-->
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
