--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
 
             <ImageView
                 style="@style/LoginRegisterImageViewIcon"
-                android:contentDescription="@string/login_icon_placeholder"
+                android:contentDescription="@string/login_layout_icon_placeholder"
                 android:src="@drawable/ic_chronotes_dark" />
 
         </FrameLayout>
@@ -29,13 +29,14 @@
             <EditText
                 android:id="@+id/et_login_email"
                 style="@style/LoginRegisterEditText"
-                android:layout_toEndOf="@+id/et_login_email_icon"
-                android:hint="@string/login_email_placeholder"
+                android:layout_toEndOf="@+id/iv_login_email_icon"
+                android:hint="@string/login_layout_email_placeholder"
                 android:inputType="textEmailAddress" />
 
             <ImageView
-                android:id="@+id/et_login_email_icon"
+                android:id="@+id/iv_login_email_icon"
                 style="@style/LoginRegisterImageView"
+                android:contentDescription="@string/login_layout_icon_placeholder"
                 android:src="@drawable/ic_email" />
 
         </RelativeLayout>
@@ -47,7 +48,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/et_login_password_icon"
+                android:layout_toEndOf="@+id/iv_login_password_icon"
                 app:hintAnimationEnabled="false"
                 app:hintEnabled="false"
                 app:passwordToggleEnabled="true">
@@ -55,13 +56,14 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_login_password"
                     style="@style/LoginRegisterEditText"
-                    android:hint="@string/login_password_placeholder"
+                    android:hint="@string/login_layout_password_placeholder"
                     android:inputType="textPassword" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <ImageView
-                android:id="@+id/et_login_password_icon"
+                android:id="@+id/iv_login_password_icon"
+                android:contentDescription="@string/login_layout_icon_placeholder"
                 style="@style/LoginRegisterImageView"
                 android:src="@drawable/ic_password" />
 
@@ -75,25 +77,25 @@
             <CheckBox
                 android:id="@+id/cb_login_remember_me"
                 style="@style/LoginRememberMe"
-                android:text="@string/login_remember_me" />
+                android:text="@string/login_layout_remember_me" />
 
         </LinearLayout>
 
         <Button
             android:id="@+id/bt_login"
             style="@style/LoginRegisterButton"
-            android:text="@string/login_button" />
+            android:text="@string/login_layout_button" />
 
         <TextView
             style="@style/LoginRegisterAfterButton"
-            android:text="@string/login_dont_have_an_account" />
+            android:text="@string/login_layout_dont_have_an_account" />
 
         <TextView
             android:id="@+id/bt_login_to_register"
             style="@style/LoginRegister"
             android:clickable="true"
             android:focusable="true"
-            android:text="@string/login_register" />
+            android:text="@string/login_layout_register" />
 
     </LinearLayout>
 
@@ -105,7 +107,7 @@
 
         <TextView
             style="@style/LoginRegisterContinueWith"
-            android:text="@string/login_continue_with" />
+            android:text="@string/login_layout_continue_with" />
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/google_button"
